--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -12,32 +12,38 @@
       <div class="navbar-end">
         <a class="navbar-item" href="#">Home</a>
         <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" href="#">Product</a>
+          <a class="navbar-link" href="#">Mobile Platform</a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="#">Stuff</a>
-            <a class="navbar-item" href="#">Product B</a>
-            <a class="navbar-item" href="#">Product C</a>
+            <a class="navbar-item" href="#">Android</a>
+            <a class="navbar-item" href="#">iOS</a>
+            <a class="navbar-item" href="#">Cordova</a>
+            <a class="navbar-item" href="#">Xamarin</a>
           </div>
         </div>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Services</a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="#">Service A</a>
-            <a class="navbar-item" href="#">Service B</a>
-            <a class="navbar-item" href="#">Service C</a>
+            <a class="navbar-item" href="#">Build</a>
+            <a class="navbar-item" href="#">Push</a>
+            <a class="navbar-item" href="#">Auth</a>
+            <a class="navbar-item" href="#">Security Checking</a>
+          
           </div>
         </div>
         <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" href="#">Resources</a>
+          <a class="navbar-link" href="#">Infrastructure Platform</a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="#">Resource A</a>
-            <a class="navbar-item" href="#">Resource B</a>
-            <a class="navbar-item" href="#">Resource C</a>
+            <a class="navbar-item" href="#">Minishift</a>
+            <a class="navbar-item" href="#">OpenShift Origin</a>
+            <a class="navbar-item" href="#">OpenShift Dedicated</a>
+            <a class="navbar-item" href="#">OpenShift Container Platform</a>
+            <a class="navbar-item" href="#">OpenShift Online</a>
+
           </div>
         </div>
         <div class="navbar-item">
           <span class="control">
-            <a class="button is-primary" href="#">Download</a>
+            <a class="button is-primary" href="#">Downloads</a>
           </span>
         </div>
       </div>
