--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -23,28 +23,12 @@
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Services</a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="#">Build</a>
+            <a class="navbar-item" href="../../metrics/latest/index.html">Metrics</a>
             <a class="navbar-item" href="#">Push</a>
             <a class="navbar-item" href="#">Auth</a>
             <a class="navbar-item" href="#">Security Checking</a>
           
           </div>
-        </div>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" href="#">Infrastructure Platform</a>
-          <div class="navbar-dropdown">
-            <a class="navbar-item" href="#">Minishift</a>
-            <a class="navbar-item" href="#">OpenShift Origin</a>
-            <a class="navbar-item" href="#">OpenShift Dedicated</a>
-            <a class="navbar-item" href="#">OpenShift Container Platform</a>
-            <a class="navbar-item" href="#">OpenShift Online</a>
-
-          </div>
-        </div>
-        <div class="navbar-item">
-          <span class="control">
-            <a class="button is-primary" href="#">Downloads</a>
-          </span>
         </div>
       </div>
     </div>
