make menus better

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -10,24 +10,22 @@
     </div>
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
-        <a class="navbar-item" href="#">Home</a>
+        <a class="navbar-item" href="/">Home</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Mobile Platform</a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="#">Android</a>
-            <a class="navbar-item" href="#">iOS</a>
-            <a class="navbar-item" href="#">Cordova</a>
-            <a class="navbar-item" href="#">Xamarin</a>
+            <a class="navbar-item" href="../../android/latest/index.html">Android</a>
+            <a class="navbar-item" href="../../ios/latest/index.html">iOS</a>
+            <a class="navbar-item" href="../../cordova/latest/index.html">Cordova</a>
+            <a class="navbar-item" href="../../xamarin/latest/index.html">Xamarin</a>
           </div>
         </div>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Services</a>
           <div class="navbar-dropdown">
             <a class="navbar-item" href="../../metrics/latest/index.html">Metrics</a>
-            <a class="navbar-item" href="#">Push</a>
-            <a class="navbar-item" href="#">Auth</a>
-            <a class="navbar-item" href="#">Security Checking</a>
-          
+            <a class="navbar-item" href="../../push/latest/index.html">Push</a>
+            <a class="navbar-item" href="../../idm/latest/index.html">Identity</a>       
           </div>
         </div>
       </div>
