--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -11,6 +11,7 @@
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
         <a class="navbar-item" href="/">Home</a>
+        <a class="navbar-item" href="../../processes/latest/index.html">Community Guides</a>        
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Mobile Platform</a>
           <div class="navbar-dropdown">
