change sdk names

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -15,10 +15,10 @@
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Mobile Platform</a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="../../android/latest/index.html">Android</a>
-            <a class="navbar-item" href="../../ios/latest/index.html">iOS</a>
-            <a class="navbar-item" href="../../cordova/latest/index.html">Cordova</a>
-            <a class="navbar-item" href="../../xamarin/latest/index.html">Xamarin</a>
+            <a class="navbar-item" href="../../android-sdk/latest/index.html">Android</a>
+            <a class="navbar-item" href="../../ios-sdk/latest/index.html">iOS</a>
+            <a class="navbar-item" href="../../cordova-sdk/latest/index.html">Cordova</a>
+            <a class="navbar-item" href="../../xamarin-sdk/latest/index.html">Xamarin</a>
           </div>
         </div>
         <div class="navbar-item has-dropdown is-hoverable">
