--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -11,22 +11,23 @@
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
         <a class="navbar-item" href="/">Home</a>
-        <a class="navbar-item" href="../../processes/latest/index.html">Community Guides</a>        
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Mobile Platform</a>
           <div class="navbar-dropdown">
             <a class="navbar-item" href="../../android-sdk/latest/index.html">Android</a>
-            <a class="navbar-item" href="../../ios-sdk/latest/index.html">iOS</a>
-            <a class="navbar-item" href="../../cordova-sdk/latest/index.html">Cordova</a>
-            <a class="navbar-item" href="../../xamarin-sdk/latest/index.html">Xamarin</a>
+            <a class="navbar-item" href="../../ios/latest/index.html">iOS</a>
+            <a class="navbar-item" href="../../cordova/latest/index.html">Cordova</a>
+            <a class="navbar-item" href="../../xamarin/latest/index.html">Xamarin</a>
           </div>
         </div>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Services</a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="../../metrics/latest/index.html">Metrics</a>
+            <a class="navbar-item" href="../../custom/latest/index.html">Backend</a>
             <a class="navbar-item" href="../../push/latest/index.html">Push</a>
-            <a class="navbar-item" href="../../idm/latest/index.html">Identity</a>       
+            <a class="navbar-item" href="../../keycloak/latest/index.html">Auth</a>       
+            <a class="navbar-item" href="../../metrics/latest/index.html">Metrics</a>
+            <a class="navbar-item" href="../../ci-cd/latest/index.html">CI/CD</a>
           </div>
         </div>
       </div>
