MOBDOC-22 Update Antora UI

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -17,7 +17,7 @@
             <a class="navbar-item" href="../../android-sdk/latest/index.html">Android</a>
             <a class="navbar-item" href="../../ios/latest/index.html">iOS</a>
             <a class="navbar-item" href="../../cordova/latest/index.html">Cordova</a>
-            <a class="navbar-item" href="../../xamarin/latest/index.html">Xamarin</a>
+            <a class="navbar-item" href="../../xamarin-sdk/latest/index.html">Xamarin</a>
           </div>
         </div>
         <div class="navbar-item has-dropdown is-hoverable">
@@ -27,7 +27,7 @@
             <a class="navbar-item" href="../../push/latest/index.html">Push</a>
             <a class="navbar-item" href="../../keycloak/latest/index.html">Auth</a>       
             <a class="navbar-item" href="../../metrics/latest/index.html">Metrics</a>
-            <a class="navbar-item" href="../../ci-cd/latest/index.html">CI/CD</a>
+            <a class="navbar-item" href="../../build/latest/index.html">CI/CD</a>
           </div>
         </div>
       </div>
