--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,6 @@
 :root {
   --color-text: #222;
-  --color-navbar-bg: #0a0a0a;
+  --color-navbar-bg: #4296b4;
   --color-navbar-bg-focus: #000;
   --color-navbar-text: #fff;
 }
