--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -68,7 +68,7 @@
   background-size: 112px 70px;
   cursor: pointer;
   width: 127px;
-  margin: 7px 15px 0 15px;
+  margin: 7px 15px 0;
   text-indent: -99999px;
   -webkit-transition: none;
   -moz-transition: none;
