--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -62,7 +62,7 @@
 }
 
 .navbar-brand {
-  background-image: url("/_/img/logo.png");
+  background-image: url("../img/logo.png");
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: 112px 70px;
