--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -60,3 +60,27 @@
   flex-direction: column;
   height: inherit;
 }
+
+.navbar-brand {
+  background-image: url("../img/logo.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: 112px 70px;
+  cursor: pointer;
+  width: 127px;
+  margin: 7px 15px 0;
+  text-indent: -99999px;
+  -webkit-transition: none;
+  -moz-transition: none;
+  -o-transition: none;
+  transition: none;
+  float: left;
+  padding: 15px;
+  font-size: 18px;
+  line-height: 20px;
+  height: 35px !important;
+}
+
+.navbar-brand:hover {
+  background-position: 0 100%;
+}
