--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,14 +1,15 @@
 footer.footer {
   font-size: 0.85rem;
-  background-color: #2c2c2c;
+  background-color: #2e6980;
   color: #8e8e8e;
   padding: 0.5rem 1rem;
 }
 
 .footer p {
   margin: 0.5rem 0;
+  color: #e4e4e4;
 }
 
 .footer a {
-  color: #5d5d5d;
+  color: #e4e4e4;
 }
