--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,5 +1,5 @@
 :root {
-  --color-text: rgba(0, 0,, 0, 0.65);
+  --color-text: rgba(0, 0, 0, 0.65);
   --color-navbar-bg: #4296b4;
   --color-navbar-bg-focus: #000;
   --color-navbar-text: #fff;
