--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,6 @@
 :root {
   --color-text: rgba(0, 0, 0, 0, 0.65);
-  --color-navbar-bg: #4296b4;
+  --color-navbar-bg: #2e6980;
   --color-navbar-bg-focus: #000;
   --color-navbar-text: #fff;
 }
@@ -8,6 +8,7 @@
 html,
 body {
   height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 *,
@@ -71,4 +72,31 @@ th {
 
 ::-webkit-scrollbar-thumb:window-inactive {
   background: transparent;
+}
+
+h5 {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.1;
+  margin-top: 11px;
+  margin-bottom: 11px;
+}
+
+.list-inline {
+  padding-left: 0;
+  list-style: none;
+  margin-left: -5px;
+}
+
+.list-inline > li {
+  display: inline-block;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-bottom: 11px;
+}
+
+.list-unstyled {
+  padding-left: 0;
+  margin-bottom: 11px;
+  list-style: none;
 }
