--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,4 +8,12 @@
     /* min-width: 0 required for flexbox to constrain overflowing elements */
     min-width: 0;
   }
+
+  .main-wrapper .navigation {
+    top: 50px;
+  }
+
+  .main-wrapper .main .toolbar {
+    top: 50px;
+  }
 }
