--- a/src/css/header.css
+++ b/src/css/header.css
@@ -120,3 +120,34 @@ nav {
   font-size: 16px;
   line-height: 20px;
 }
+
+body.nochrome .navbar {
+  display: none;
+}
+
+body.nochrome {
+  padding-top: 0;
+}
+
+body.nochrome .toolbar {
+  top: 0;
+  margin-top: 0;
+}
+
+body.nochrome .navigation {
+  top: 0;
+}
+
+body.nochrome .main-wrapper {
+  margin-top: 0;
+}
+
+body.nochrome .main-wrapper .main .toolbar {
+  top: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .navigation {
+    height: calc(100vh - 0);
+  }
+}
