--- a/src/css/base.css
+++ b/src/css/base.css
@@ -7,8 +7,11 @@
 
 html,
 body {
+  box-sizing: border-box;
   height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 1.1em;
+  text-size-adjust: 100%;
 }
 
 *,
