--- a/src/css/site.css
+++ b/src/css/site.css
@@ -16,10 +16,10 @@
 }
 
 .switch {
-  border-width: 1px 1px 0;
-  border-style: solid;
-  border-color: #000;
+  width: 100%;
   display: inline-block;
+  background: #fff;
+  border-radius: 10px;
 }
 
 .switch--item {
@@ -28,15 +28,11 @@
   color: #000;
   display: inline-block;
   cursor: pointer;
-}
-
-.switch--item:not(:first-child) {
-  border-width: 0 0 0 1px;
-  border-style: solid;
-  border-color: #000;
+  border-radius: 10px;
 }
 
 .switch--item.selected {
-  background-color: #000;
+  background-color: #2e6980;
   color: #fff;
+  border-radius: 10px;
 }
