--- a/src/css/site.css
+++ b/src/css/site.css
@@ -16,23 +16,35 @@
 }
 
 .switch {
-  width: 100%;
   display: inline-block;
   background: #fff;
   border-radius: 10px;
 }
 
 .switch--item {
-  padding: 10px;
-  background-color: #fff;
-  color: #000;
   display: inline-block;
+  padding: 7px;
+  background-color: #2e6980;
+  color: #a7c9d9;
   cursor: pointer;
-  border-radius: 10px;
+  border: 1px solid #aaa;
 }
 
 .switch--item.selected {
-  background-color: #2e6980;
+  -webkit-box-shadow: inset 0 4px 0 #ffd400 !important;
+  box-shadow: inset 0 4px 0 #ffd400 !important;
   color: #fff;
-  border-radius: 10px;
+}
+
+.sidebarblock.primary {
+  padding-top: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.sidebarblock.primary > content {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: -15px;
+  margin-bottom: -9px;
 }
