--- a/src/css/site.css
+++ b/src/css/site.css
@@ -19,6 +19,10 @@
   display: inline-block;
   background: #fff;
   width: 100%;
+  margin-left: -15px;
+  padding-right: 15px;
+  position: absolute;
+  top: 0;
 }
 
 .switch--item {
@@ -36,9 +40,9 @@
 }
 
 .sidebarblock.primary {
-  padding-top: 0;
-  padding-left: 0;
-  padding-right: 0;
+  background-color: #e1e1e1;
+  padding: 40px 15px;
+  position: relative;
 }
 
 .sidebarblock.primary > content {
