staging.aerogear.org -> aerogear.org

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -16,43 +16,43 @@
       <ul class="nav navbar-nav">
         
         <li>
-          <a href="https://staging.aerogear.org">Home</a>
+          <a href="https://aerogear.org">Home</a>
         </li>
 
         <li>
-          <a href="https://staging.aerogear.org/getting-started/overview/">Getting Started</a>
+          <a href="https://aerogear.org/getting-started/overview/">Getting Started</a>
         </li>
 
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mobile Services<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li>
-                <a href="https://staging.aerogear.org/services/mobile-ci-cd/">
+                <a href="https://aerogear.org/services/mobile-ci-cd/">
                   <i class="material-icons" aria-hidden="true">build</i> Mobile CI/CD
                 </a>
               </li>
               <li>
-                <a href="https://staging.aerogear.org/services/push/">
+                <a href="https://aerogear.org/services/push/">
                   <i class="material-icons" aria-hidden="true">notifications_active</i> Push Notifications
                 </a>
               </li>
               <li>
-                <a href="https://staging.aerogear.org/services/metrics/">
+                <a href="https://aerogear.org/services/metrics/">
                   <i class="material-icons" aria-hidden="true">insert_chart</i> Metrics
                 </a>
               </li>
               <li>
-                <a href="https://staging.aerogear.org/services/runtime-connector/">
+                <a href="https://aerogear.org/services/runtime-connector/">
                   <i class="material-icons" aria-hidden="true">cloud</i> Runtime Connector
                 </a>
               </li>
               <li>
-                <a href="https://staging.aerogear.org/services/identity-management/">
+                <a href="https://aerogear.org/services/identity-management/">
                   <i class="material-icons" aria-hidden="true">account_circle</i> Identity Management
                 </a>
               </li>
               <li>
-                <a href="https://staging.aerogear.org/services/device-security/">
+                <a href="https://aerogear.org/services/device-security/">
                   <i class="material-icons" aria-hidden="true">security</i> Device Security
                 </a>
               </li>
@@ -62,10 +62,10 @@
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mobile SDKs<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="https://staging.aerogear.org/sdks/android/">Android</a></li>
-            <li><a href="https://staging.aerogear.org/sdks/cordova/">Cordova</li>
-            <li><a href="https://staging.aerogear.org/sdks/ios/">iOS</a></li>
-            <li><a href="https://staging.aerogear.org/sdks/xamarin/">Xamarin</a></li>
+            <li><a href="https://aerogear.org/sdks/android/">Android</a></li>
+            <li><a href="https://aerogear.org/sdks/cordova/">Cordova</li>
+            <li><a href="https://aerogear.org/sdks/ios/">iOS</a></li>
+            <li><a href="https://aerogear.org/sdks/xamarin/">Xamarin</a></li>
           </ul>
         </li>
 
@@ -74,12 +74,12 @@
         </li>
    
         <li>
-          <a href="https://staging.aerogear.org/community">Community</a>
+          <a href="https://aerogear.org/community">Community</a>
         </li>
         
 
         <li>
-          <a href="https://staging.aerogear.org/news">News</a>
+          <a href="https://aerogear.org/news">News</a>
         </li>
         
       </ul>
