--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -4,10 +4,7 @@
       <div class="col-sm-3">
         <h5>Getting Started</h5>
         <ul class="list-unstyled">
-          <li><a href="https://aerogear.org/getting-started/overview/">Overview</a></li>
-          <li><a href="https://aerogear.org/getting-started/installation-and-configuration/">Installation &amp; Configuration</a></li>
-          <li><a href="https://aerogear.org/getting-started/creating-mobile-apps/">Creating Mobile Apps</a></li>
-          <li><a href="https://aerogear.org/getting-started/enabling-mobile-services/">Enabling Mobile Services</a></li>
+          <li><a href="https://aerogear.org/getting-started/">Overview</a></li>
         </ul>
       </div><!-- col -->
 
