--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -20,15 +20,15 @@
         </li>
 
         <li>
-          <a href="https://aerogear.org/getting-started/overview/">Getting Started</a>
+          <a href="https://aerogear.org/getting-started/">Getting Started</a>
         </li>
 
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mobile Services<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li>
-                <a href="https://aerogear.org/services/mobile-ci-cd/">
-                  <i class="material-icons" aria-hidden="true">build</i> Mobile CI/CD
+                <a href="https://aerogear.org/services/identity-management/">
+                  <i class="material-icons" aria-hidden="true">account_circle</i> Identity Management
                 </a>
               </li>
               <li>
@@ -37,18 +37,18 @@
                 </a>
               </li>
               <li>
-                <a href="https://aerogear.org/services/metrics/">
-                  <i class="material-icons" aria-hidden="true">insert_chart</i> Metrics
-                </a>
-              </li>
-              <li>
                 <a href="https://aerogear.org/services/runtime-connector/">
                   <i class="material-icons" aria-hidden="true">cloud</i> Runtime Connector
                 </a>
               </li>
               <li>
-                <a href="https://aerogear.org/services/identity-management/">
-                  <i class="material-icons" aria-hidden="true">account_circle</i> Identity Management
+                <a href="https://aerogear.org/services/metrics/">
+                  <i class="material-icons" aria-hidden="true">insert_chart</i> Mobile Metrics
+                </a>
+              </li>
+              <li>
+                <a href="https://aerogear.org/services/mobile-ci-cd/">
+                  <i class="material-icons" aria-hidden="true">build</i> Mobile CI/CD
                 </a>
               </li>
               <li>
@@ -60,13 +60,7 @@
         </li>
 
         <li>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mobile SDKs<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="https://aerogear.org/sdks/android/">Android</a></li>
-            <li><a href="https://aerogear.org/sdks/cordova/">Cordova</li>
-            <li><a href="https://aerogear.org/sdks/ios/">iOS</a></li>
-            <li><a href="https://aerogear.org/sdks/xamarin/">Xamarin</a></li>
-          </ul>
+          <a href="https://aerogear.org/sdks">Mobile SDKs</a>
         </li>
 
         <li class="hidden-sm active">
