--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -68,12 +68,12 @@
             <ul class="dropdown-menu" role="menu">
               <li>
                 <a href="https://docs.aerogear.org/">
-                  <i class="material-icons" aria-hidden="true">account_circle</i> Latest
+                  Latest
                 </a>
               </li>
               <li>
                 <a href="https://docs.aerogear.org/v1.0/latest/getting-started.html">
-                  <i class="material-icons" aria-hidden="true">notifications_active</i> 1.0.0
+                  1.0.0
                 </a>
               </li>
             </ul>
