add docs menu (#22)
* add docs menu

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -58,8 +58,20 @@
           <a href="https://aerogear.org/sdks">Mobile SDKs</a>
         </li>
 
-        <li class="hidden-sm active">
-          <a href="https://docs.aerogear.org">Docs</a>
+        <li>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Docs<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li>
+                <a href="https://docs.aerogear.org/">
+                  Latest
+                </a>
+              </li>
+              <li>
+                <a href="https://docs.aerogear.org/v1.0/latest/getting-started.html">
+                  1.0.0
+                </a>
+              </li>
+            </ul>
         </li>
    
         <li>
