--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -59,19 +59,7 @@
         </li>
 
         <li>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Docs<span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li>
-                <a href="https://docs.aerogear.org/">
-                  Latest
-                </a>
-              </li>
-              <li>
-                <a href="https://docs.aerogear.org/v1.0/latest/getting-started.html">
-                  1.0.0
-                </a>
-              </li>
-            </ul>
+         <a href="https://docs.aerogear.org/">Docs</a>
         </li>
    
         <li>
