add application security on dropdown and footer

--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -10,6 +10,7 @@
          <li><a href="https://aerogear.org/services/metrics/">Mobile Metrics</a></li>
          <li><a href="https://aerogear.org/services/mobile-ci-cd/">Mobile CI/CD</a></li>
          <li><a href="https://aerogear.org/services/device-security/">Device Security</a></li>
+         <li><a href="https://aerogear.org/services/app-security/">Application Security</a></li>
         </ul>
       </div><!-- col -->
 
