--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -51,6 +51,11 @@
                   <i class="material-icons" aria-hidden="true">security</i> Device Security
                 </a>
               </li>
+              <li>
+                <a href="https://aerogear.org/services/app-security/">
+                  <i class="material-icons" aria-hidden="true">lock</i> Application Security
+                </a>
+              </li>
             </ul>
         </li>
 
